--- a/success.html
+++ b/success.html
@@ -13,6 +13,7 @@
     <div style="padding-left: 15%;" class="jumbotron">
         <h1 class="display-4">Awesme! </h1>
         <p class="lead">You have been successfully signed up to NewsLetter.</p>
+        <p>Check your e-mail account for a new mail from our side.</p>
         <hr class="my-4">
         <!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
