--- a/success.html
+++ b/success.html
@@ -13,7 +13,8 @@
     <div style="padding-left: 15%;" class="jumbotron">
         <h1 class="display-4">Awesme! </h1>
         <p class="lead">You have been successfully signed up to NewsLetter.</p>
-        <p>Check your e-mail account for a new mail from our side.</p>
+        <p>Check your e-mail account for a new mail from our side.</p> <br> <br>
+        <p>Make sure to <u>check <b>spam</b> folder</u>.</p>
         <hr class="my-4">
         <!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
